[tool.poetry]
name = "feeddownloader"
version = "1.5.2"
description = "Download feeds (e.g. RSS) and all linked pages, like a crawler/scraper."
authors = ["Ixtalo <ixtalo@users.noreply.github.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "*"
requests = "*"
docopt = "*"
beautifulsoup4 = "*"
lxml = "*"
colorlog = "*"
validators = "*"


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-sugar = "*"
pytest-cov = "*"
pytest-clarity = "*"
pytest-icdiff = "*"
flake8-pyproject = "^1.2.3"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

## https://flake8.pycqa.org/en/latest/user/configuration.html
## https://github.com/john-hen/Flake8-pyproject
[tool.flake8]
ignore = ["E501"]
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true

## http://www.pydocstyle.org/en/stable/usage.html#configuration-files
[tool.pydocstyle]
#match_dir='^[^\.t].+$'
#match_dir = '[^/].+'

## https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]

## https://coverage.readthedocs.io/en/latest/source.html#source
[tool.coverage.run]
omit = ["tests/*", "__init__.py"]

## https://github.com/hhatto/autopep8?tab=readme-ov-file#configuration
[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
